# build-challenge

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  build-challenge.md  pyproject.toml
docs/: architecture.html  sdk-patterns.md
docs/adr/: 0001-gemini-as-ai-provider.md
src/app/: config.py  main.py  scheduler.py
src/app/digest/: service.py
src/app/domain/: models.py  ports.py
src/app/infrastructure/: gemini_provider.py  repository.py
src/app/ingestion/: service.py
tests/: conftest.py  test_digest.py  test_gemini_provider.py  test_ingestion.py  test_pipeline_resilience.py  test_scheduler.py  test_voice_document_ingestion.py
